--- a/02_data_analysis/type_analysis_tutorial.html
+++ b/02_data_analysis/type_analysis_tutorial.html
@@ -408,7 +408,7 @@ library(tidygraph)</code></pre>
 <p>ダウンロードしたcsvファイルを選択してください。</p>
 <pre class="r"><code>type_data &lt;- read.csv(file.choose(), stringsAsFactors = FALSE)</code></pre>
 <p>※本資料作成時には、コードが自動で実行され、ファイル選択ができないため、以下のように、ファイルを指定するコードを実行しています。</p>
-<pre class="r"><code>type_data &lt;- read.csv(&quot;type_analytics_1.csv&quot;, stringsAsFactors = FALSE)</code></pre>
+<pre class="r"><code>type_data &lt;- read.csv(&quot;type_analysis_1.csv&quot;, stringsAsFactors = FALSE)</code></pre>
 </div>
 <div id="手順②有向ネットワークの構築" class="section level2">
 <h2>手順②：有向ネットワークの構築</h2>
